Added Georgian translations

--- a/app/views/budget/show.html.erb
+++ b/app/views/budget/show.html.erb
@@ -8,6 +8,7 @@
 
     <script>
         var category_names_array = <%= raw @category_names.to_json %>;
+        var input_names_array = <%= raw @input_names.to_json %>;
     </script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
@@ -15,38 +16,70 @@
 <% end %>
 
 
-    <div class="col-md-3 column">
+<div class="col-md-3 column">
 
-      <div class="bs-example">
-        <div class="panel-group" id="accordion">
-          <% @category_item.each_with_index do |(cat_name,items),i| %>
+  <div class="bs-example">
+    <div class="panel-group" id="accordion">
+      <% @category_item.each_with_index do |(cat_name,items),i| %>
+          <% if i < 7 %> <!-- We display the 7 first categories on the left hand side of the graph -->
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%=i%>"><%=cat_name%></a>
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%=i%>"><%= "#{t('budget.'+cat_name)}" %></a>
                   </h4>
                 </div>
                 <div id="collapse<%=i%>" class="panel-collapse collapse <% if i == 0 %> in <% end %> ">
                   <div class="panel-body">
                     <% items.each_with_index do |item, j| %>
                         <div style="padding: 5px;">
-                         <%= item['name'] %>
-                         <%= text_field_tag "#{cat_name}-#{j.to_s}", item['amount'], class: "form-control amount #{cat_name.gsub(' ','_')}" %>
+                          <%= item['name'] %>
+                          <%= text_field_tag "#{cat_name}-#{j.to_s}", item['amount'], class: "form-control amount #{cat_name.gsub(' ','_')}" %>
                         </div>
                     <% end %>
                   </div>
                 </div>
               </div>
-
           <% end %>
 
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-9 column">
-
-      <div id="chart_canvas"></div>
+      <% end %>
 
     </div>
+  </div>
+</div>
 
+<div class="col-md-6 column">
+
+  <div id="chart_canvas"></div>
+
+</div>
+
+
+<div class="col-md-3 column">
+
+  <div class="bs-example">
+    <div class="panel-group" id="accordion">
+      <% @category_item.each_with_index do |(cat_name,items),i| %>
+          <% if i >= 7 %> <!-- We display the second half of the categories, on the right hand side -->
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%=i%>"><%= "#{t('budget.'+cat_name)}" %></a>
+                  </h4>
+                </div>
+                <div id="collapse<%=i%>" class="panel-collapse collapse <% if i == 7 %> in <% end %> ">
+                  <div class="panel-body">
+                    <% items.each_with_index do |item, j| %>
+                        <div style="padding: 5px;">
+                          <%= item['name'] %>
+                          <%= text_field_tag "#{cat_name}-#{j.to_s}", item['amount'], class: "form-control amount #{cat_name.gsub(' ','_')}" %>
+                        </div>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+          <% end %>
+
+      <% end %>
+    </div>
+  </div>
+</div>
