--- a/app/views/budget/show.html.erb
+++ b/app/views/budget/show.html.erb
@@ -24,25 +24,28 @@
     <div class="panel-group" id="accordion">
       <% @category_item.each_with_index do |(cat_name,items),i| %>
           <% if !@main_programs.include?cat_name %> <!-- We display the 7 first categories on the left hand side of the graph -->
-              <div class="panel panel-default">
-                <div class="panel-heading">
+              <div class="panel panel-default popover-markup">
+                <div id="link-popover-<%= i %>" class="panel-heading popover-link">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%=i%>"><%= "#{t('budget.'+cat_name)}" %></a>
+                    <a href="#"><%= "#{t('budget.'+cat_name)}" %></a>
                   </h4>
                 </div>
-                <div id="collapse<%=i%>" class="panel-collapse collapse <% if i == 1 %> in <% end %> ">
-                  <div class="panel-body">
-                    <% items.each_with_index do |item, j| %>
-                        <div style="padding: 5px;">
-                          <%= item['name'] %>
-                          <%= text_field_tag "#{cat_name}-#{j.to_s}", item['amount'], class: "form-control amount amount-left #{cat_name.gsub(' ','_')}", autocomplete: 'off' %>
-                        </div>
-                    <% end %>
+
+                  <div class="head hide"><%= cat_name %></div>
+                  <div class="content hide">
+                    <div class="panel-body">
+                      <% items.each_with_index do |item, j| %>
+                          <div style="padding: 5px;">
+                            <%= item['name'] %>
+                            <%= text_field_tag "#{cat_name}-#{j.to_s}", item['amount'], class: "form-control amount amount-left #{cat_name.gsub(' ','_')}", autocomplete: 'off' %>
+                          </div>
+                      <% end %>
+                    </div>
                   </div>
-                </div>
+                  <div class="footer hide"></div>
+
               </div>
           <% end %>
-
       <% end %>
 
     </div>
@@ -62,16 +65,18 @@
 <!-- start right column -->
 <div class="col-sm-3 column nopadding">
   <div class="bs-example">
-    <div class="panel-group" id="accordion">
+    <div class="panel-group">
       <% @category_item.each_with_index do |(cat_name,items),i| %>
           <% if @main_programs.include?cat_name %> <!-- We display the second half of the categories, on the right hand side, only the main programs -->
-              <div class="panel panel-default">
-                <div class="panel-heading">
+              <div class="panel panel-default popover-markup">
+                <div id="link-popover-right-<%= i %>" class="panel-heading popover-link">
                   <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%=i%>"><%= "#{t('budget.'+cat_name)}" %></a>
+                    <a href="#"><%= "#{t('budget.'+cat_name)}" %></a>
                   </h4>
                 </div>
-                <div id="collapse<%=i%>" class="panel-collapse collapse <% if i == 0 %> in <% end %> ">
+
+                <div class="head hide"><%= cat_name %></div>
+                <div class="content hide">
                   <div class="panel-body">
                     <% items.each_with_index do |item, j| %>
                         <div style="padding: 5px;">
@@ -81,6 +86,8 @@
                     <% end %>
                   </div>
                 </div>
+                <div class="footer hide"></div>
+
               </div>
           <% end %>
 
