--- a/app/views/shared/_budget_columns.html.erb
+++ b/app/views/shared/_budget_columns.html.erb
@@ -99,6 +99,8 @@
 </div>
 <!-- end right column -->
 
-<div class="col-sm-12 column nopadding">
-  <a href="#" class="btn btn-success pull-right">Done</a>
+<div class="col-sm-12 column" style="padding-bottom: 20px;">
+  <button class="btn btn-success pull-right" data-toggle="modal" data-target="#myModal">
+    Show conclusion
+  </button>
 </div>
