--- a/app/views/budget/show.html.erb
+++ b/app/views/budget/show.html.erb
@@ -44,3 +44,27 @@
   </div>
 
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Conclusion</h4>
+      </div>
+      <div class="modal-body">
+        List of consequences, triggered by user's input:
+        <ul>
+          <li>Consequence 1</li>
+          <li>Consequence 2</li>
+          <li>Consequence 3</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= link_to(t('budget.reset_page'), budget_show_path(:locale => I18n.locale), class: 'btn btn-primary' )%>
+      </div>
+    </div>
+  </div>
+</div>
