Integrated new programs and priorities

--- a/app/assets/stylesheets/budget.css
+++ b/app/assets/stylesheets/budget.css
@@ -64,7 +64,15 @@
     top: 0;
 }
 
+.popover {
+    font-size: 12px;
+}
+
 .popover-link {
     text-align: center;
+}
+
+.panel-title {
+    font-size: 14px !important;
 }
 
