--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,6 +110,10 @@
 		<script type="text/javascript">
 			I18n.defaultLocale = "<%= I18n.default_locale %>";
 			I18n.locale = "<%= I18n.locale %>";
+
+            $(function() {
+                $('body').scrollTop(0);
+            });
 		</script>
 
 		<% if Rails.env.production? %>
